iac/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  ingressClassName: nginx
  rules:
  - host: hello
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-proto-world-service
            port:
              number: 443
  tls:
  - secretName: hello-ingress-tls
    hosts:
      - hello
